; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mii/extr_mii.c_miibus_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mii/extr_mii.c_miibus_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mii_data = type { i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @miibus_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @miibus_detach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.mii_data*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @bus_generic_detach(i32 %4)
  %6 = load i32, i32* %2, align 4
  %7 = call %struct.mii_data* @device_get_softc(i32 %6)
  store %struct.mii_data* %7, %struct.mii_data** %3, align 8
  %8 = load %struct.mii_data*, %struct.mii_data** %3, align 8
  %9 = getelementptr inbounds %struct.mii_data, %struct.mii_data* %8, i32 0, i32 1
  %10 = call i32 @ifmedia_removeall(i32* %9)
  %11 = load %struct.mii_data*, %struct.mii_data** %3, align 8
  %12 = getelementptr inbounds %struct.mii_data, %struct.mii_data* %11, i32 0, i32 0
  store i32* null, i32** %12, align 8
  ret i32 0
}

declare dso_local i32 @bus_generic_detach(i32) #1

declare dso_local %struct.mii_data* @device_get_softc(i32) #1

declare dso_local i32 @ifmedia_removeall(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
